# dash

./: CLAUDE.md  README.md  pyproject.toml
app/: config.yaml
da/: agent.py  paths.py
da/context/: business_rules.py  query_patterns.py  semantic_model.py
da/evals/: test_cases.py
da/scripts/: load_data.py  load_knowledge.py
da/tools/: __init__.py  analyze.py  introspect.py  save_query.py
db/: session.py
